test/ddc-spec/error/01-ErrorExp/51-RunNotSupported/Main.ds

module Main where

foo
 = private r with {Read r} in
   do   let f () = box (weakeff Write r in ())
        run f ()
